[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3.1/frames/weapon_hammer.png" type="Texture" id=1]
[ext_resource path="res://scripts/Weapons/Hammer.gd" type="Script" id=2]
[ext_resource path="res://sounds/empty_hit_sword.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/enemy_hit_sword.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("../Hurtbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0504128, 0.148675 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 120.0, -20.0, 120.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 120.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "special-attack"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 120.0, -5.5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "special-attack-fall"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.5, 88.8 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15.6742, 23.9482 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 53.6667, 17.5 )

[node name="Hammer" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="Sprite" parent="."]
position = Vector2( -15, 0 )
rotation = 2.0944
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
offset = Vector2( 0, -12.118 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
anims/attack = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/special-attack = SubResource( 3 )
anims/special-attack-fall = SubResource( 4 )

[node name="Hurtbox" type="Area2D" parent="." groups=[
"hurtbox",
]]
scale = Vector2( 3, 3 )
input_pickable = false
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 11.26, -0.177 )
shape = SubResource( 5 )
disabled = true

[node name="Hurtbox2" type="Area2D" parent="." groups=[
"hurtbox",
]]
scale = Vector2( 3, 3 )

[node name="CollisionShapeSpecial" type="CollisionShape2D" parent="Hurtbox2"]
position = Vector2( 1, 1.5 )
shape = SubResource( 6 )
disabled = true

[node name="EmptyHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="EnemyHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Hurtbox2" to="." method="_on_Hurtbox2_area_entered"]
